fix z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,6 +5,7 @@
 }
 
 .site-header {
+	z-index: 1;
 	position: fixed;
 	top: 0px;
 	width: 100%;
@@ -34,7 +35,7 @@
 
 .page-content {
 	position: relative;
-	z-index: -1;
+	// z-index: -1;
 	max-width: $page-content;
 	min-height: 380px;
 	margin: 0px auto;
